--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -37,13 +37,13 @@
               <a href="research.html">Research</a>
               <ul>
                 <li>
-                  <a href="quantum-compilation-with-rydberg-atoms.html"
-                    >Quantum Compilation with Rydberg Atoms</a
+                  <a href="compilation-for-neutral-atom-quantum-computers.html"
+                    >Compilation for neutral atom quantum computers</a
                   >
                 </li>
                 <li>
                   <a href="calibration-of-trapped-ion-systems.html"
-                    >Calibration of Trapped-Ion Systems</a
+                    >Calibration of trapped-ion systems</a
                   >
                 </li>
                 <li>
@@ -79,14 +79,14 @@
                 <h4><a href="research.html">Overview</a></h4>
                 <p></p>
                 <h4>
-                  <a href="quantum-compilation-with-rydberg-atoms.html"
-                    >Quantum Compilation with Rydberg Atoms</a
+                  <a href="compilation-for-neutral-atom-quantum-computers.html"
+                    >Compilation for neutral atom quantum computers</a
                   >
                 </h4>
                 <p></p>
                 <h4>
                   <a href="calibration-of-trapped-ion-systems.html"
-                    >Calibration of Trapped-Ion Systems</a
+                    >Calibration of trapped-ion systems</a
                   >
                 </h4>
                 <ol>
@@ -111,7 +111,7 @@
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
                 <header>
-                  <h2>Calibration of Trapped-Ion Systems</h2>
+                  <h2>Calibration of trapped-ion systems</h2>
                 </header>
                 <p>
                   This project was conducted at the Institute for Quantum
