--- a/charge-noise-in-semiconductor-spin-qubits.html
+++ b/charge-noise-in-semiconductor-spin-qubits.html
@@ -37,13 +37,13 @@
               <a href="research.html">Research</a>
               <ul>
                 <li>
-                  <a href="quantum-compilation-with-rydberg-atoms.html"
-                    >Quantum Compilation with Rydberg Atoms</a
+                  <a href="compilation-for-neutral-atom-quantum-computers.html"
+                    >Compilation for neutral atom quantum computers</a
                   >
                 </li>
                 <li>
                   <a href="calibration-of-trapped-ion-systems.html"
-                    >Calibration of Trapped-Ion Systems</a
+                    >Calibration of trapped-ion systems</a
                   >
                 </li>
                 <li>
@@ -80,15 +80,16 @@
                     <a href="research.html"><strong>Overview</strong></a>
                   </li>
                   <li>
-                    <a href="quantum-compilation-with-rydberg-atoms.html"
+                    <a
+                      href="compilation-for-neutral-atom-quantum-computers.html"
                       ><strong
-                        >Quantum Compilation with Rydberg Atoms</strong
+                        >Compilation for neutral atom quantum computers</strong
                       ></a
                     >
                   </li>
                   <li>
                     <a href="calibration-of-trapped-ion-systems.html"
-                      ><strong>Calibration of Trapped-Ion Systems</strong></a
+                      ><strong>Calibration of trapped-ion systems</strong></a
                     >
                   </li>
                   <li>
