--- a/research.html
+++ b/research.html
@@ -37,13 +37,13 @@
               <a href="research.html">Research</a>
               <ul>
                 <li>
-                  <a href="quantum-compilation-with-rydberg-atoms.html"
-                    >Quantum Compilation with Rydberg Atoms</a
+                  <a href="compilation-for-neutral-atom-quantum-computers.html"
+                    >Compilation for neutral atom quantum computers</a
                   >
                 </li>
                 <li>
                   <a href="calibration-of-trapped-ion-systems.html"
-                    >Calibration of Trapped-Ion Systems</a
+                    >Calibration of trapped-ion systems</a
                   >
                 </li>
                 <li>
@@ -80,15 +80,16 @@
                     <a href="research.html"><strong>Overview</strong></a>
                   </li>
                   <li>
-                    <a href="quantum-compilation-with-rydberg-atoms.html"
+                    <a
+                      href="compilation-for-neutral-atom-quantum-computers.html"
                       ><strong
-                        >Quantum Compilation with Rydberg Atoms</strong
+                        >Compilation for neutral atom quantum computers</strong
                       ></a
                     >
                   </li>
                   <li>
                     <a href="calibration-of-trapped-ion-systems.html"
-                      ><strong>Calibration of Trapped-Ion Systems</strong></a
+                      ><strong>Calibration of trapped-ion systems</strong></a
                     >
                   </li>
                   <li>
@@ -145,8 +146,9 @@
               <section>
                 <header>
                   <h3>
-                    <a href="quantum-compilation-with-rydberg-atoms.html"
-                      >Quantum Compilation with Rydberg Atoms</a
+                    <a
+                      href="compilation-for-neutral-atom-quantum-computers.html"
+                      >Compilation for neutral atom quantum computers</a
                     >
                   </h3>
                 </header>
@@ -174,7 +176,7 @@
                 </p>
                 <footer>
                   <a
-                    href="quantum-compilation-with-rydberg-atoms.html"
+                    href="compilation-for-neutral-atom-quantum-computers.html"
                     class="button"
                     >Read more</a
                   >
@@ -185,12 +187,12 @@
                 <header>
                   <h3>
                     <a href="calibration-of-trapped-ion-systems.html"
-                      >Calibration of Trapped-Ion Systems</a
+                      >Calibration of trapped-ion systems</a
                     >
                   </h3>
                 </header>
                 <p>
-                  The key advantages of Calibration of Trapped-Ion Systems
+                  The key advantages of Calibration of trapped-ion systems
                   include long quantum coherence times, high-precision
                   single-qubit and two-qubit operations, and high-fidelity
                   operations between any two qubits within the system. In
