--- a/notes.html
+++ b/notes.html
@@ -37,13 +37,13 @@
               <a href="research.html">Research</a>
               <ul>
                 <li>
-                  <a href="quantum-compilation-with-rydberg-atoms.html"
-                    >Quantum Compilation with Rydberg Atoms</a
+                  <a href="compilation-for-neutral-atom-quantum-computers.html"
+                    >Compilation for neutral atom quantum computers</a
                   >
                 </li>
                 <li>
                   <a href="calibration-of-trapped-ion-systems.html"
-                    >Calibration of Trapped-Ion Systems</a
+                    >Calibration of trapped-ion systems</a
                   >
                 </li>
                 <li>
