--- a/compilation-for-neutral-atom-quantum-computers.html
+++ b/compilation-for-neutral-atom-quantum-computers.html
@@ -74,32 +74,27 @@
               <header>
                 <h3>Research</h3>
               </header>
+              <p></p>
               <section>
-                <ul>
-                  <li>
-                    <a href="research.html"><strong>Overview</strong></a>
-                  </li>
-                  <li>
-                    <a
-                      href="compilation-for-neutral-atom-quantum-computers.html"
-                      ><strong
-                        >Compilation for neutral atom quantum computers</strong
-                      ></a
-                    >
-                  </li>
-                  <li>
-                    <a href="calibration-of-trapped-ion-systems.html"
-                      ><strong>Calibration of trapped-ion systems</strong></a
-                    >
-                  </li>
-                  <li>
-                    <a href="charge-noise-in-semiconductor-spin-qubits.html"
-                      ><strong
-                        >Charge Noise in Semiconductor Spin Qubits</strong
-                      ></a
-                    >
-                  </li>
-                </ul>
+                <h4><a href="research.html">Overview</a></h4>
+                <p></p>
+                <h4>
+                  <a href="compilation-for-neutral-atom-quantum-computers.html"
+                    >Compilation for neutral atom quantum computers</a
+                  >
+                </h4>
+                <p></p>
+                <h4>
+                  <a href="calibration-of-trapped-ion-systems.html"
+                    >Calibration of trapped-ion systems</a
+                  >
+                </h4>
+                <p></p>
+                <h4>
+                  <a href="charge-noise-in-semiconductor-spin-qubits.html"
+                    >Charge Noise in Semiconductor Spin Qubits</a
+                  >
+                </h4>
               </section>
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
