--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Chen's Physics World</title>
+    <title>Publications - Chen's Physics World</title>
     <meta charset="utf-8" />
     <link rel="icon" href="images/icon.png" type="image/png" />
     <meta
