--- a/photography.html
+++ b/photography.html
@@ -80,6 +80,16 @@
       <section class="carousel">
         <div class="reel">
           <article>
+            <a href="images/photograph/full/regents.jpg" class="image featured"
+              ><img src="images/photograph/small/regents.jpeg" alt=""
+            /></a>
+            <header>
+              <h3><a href="#">Regent Street, London, UK</a></h3>
+            </header>
+            <p>November 2024</p>
+          </article>
+
+          <article>
             <a
               href="images/photograph/full/switzerland.JPG"
               class="image featured"
@@ -89,6 +99,16 @@
               <h3><a href="#">Lungern, Switzerland</a></h3>
             </header>
             <p>June 2024</p>
+          </article>
+
+          <article>
+            <a href="images/photograph/full/paris2.JPG" class="image featured"
+              ><img src="images/photograph/small/paris2.jpeg" alt=""
+            /></a>
+            <header>
+              <h3><a href="#">Louvre, Paris, France</a></h3>
+            </header>
+            <p>February 2024</p>
           </article>
 
           <article>
@@ -118,6 +138,17 @@
         <div class="reel">
           <article>
             <a
+              href="images/photograph/full/epping_forest.jpg"
+              class="image featured"
+              ><img src="images/photograph/small/epping_forest.jpeg" alt=""
+            /></a>
+            <header>
+              <h3><a href="#">Epping Forest, UK</a></h3>
+            </header>
+            <p>October 2024</p>
+          </article>
+          <article>
+            <a
               href="images/photograph/full/white_cliff.JPG"
               class="image featured"
               ><img src="images/photograph/small/white_cliff.jpeg" alt=""
@@ -139,17 +170,14 @@
             </header>
             <p>June 2024</p>
           </article>
-
           <article>
-            <a
-              href="images/photograph/full/epping_forest.jpg"
-              class="image featured"
-              ><img src="images/photograph/small/epping_forest.jpeg" alt=""
+            <a href="images/photograph/full/paris.JPG" class="image featured"
+              ><img src="images/photograph/small/paris.jpeg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Epping Forest, UK</a></h3>
+              <h3><a href="#">Louvre, Paris, France</a></h3>
             </header>
-            <p>October 2024</p>
+            <p>February 2024</p>
           </article>
         </div>
       </section>
