--- a/photography.html
+++ b/photography.html
@@ -68,9 +68,9 @@
       <!-- Main -->
       <div class="wrapper style1">
         <div class="container">
-          <article id="main" class="special">
+          <article id="photography" class="special">
             <header>
-              <h2><a href="#">Photography</a></h2>
+              <h2><a href="#photography" class="scrolly">Photography</a></h2>
             </header>
           </article>
         </div>
@@ -84,7 +84,7 @@
               ><img src="images/photograph/small/regents.jpeg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Regent Street, London, UK</a></h3>
+              <h3><a>Regent Street, London, UK</a></h3>
             </header>
             <p>November 2024</p>
           </article>
@@ -96,7 +96,7 @@
               ><img src="images/photograph/small/switzerland.jpeg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Lungern, Switzerland</a></h3>
+              <h3><a>Lungern, Switzerland</a></h3>
             </header>
             <p>June 2024</p>
           </article>
@@ -106,7 +106,7 @@
               ><img src="images/photograph/small/paris2.jpeg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Louvre, Paris, France</a></h3>
+              <h3><a>Louvre, Paris, France</a></h3>
             </header>
             <p>February 2024</p>
           </article>
@@ -116,7 +116,7 @@
               ><img src="images/photograph/small/morocco.jpeg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Tangier, Morocco</a></h3>
+              <h3><a>Tangier, Morocco</a></h3>
             </header>
             <p>December 2023</p>
           </article>
