--- a/photography.html
+++ b/photography.html
@@ -102,6 +102,18 @@
           </article>
 
           <article>
+            <a
+              href="images/photograph/full/copenhagen.JPG"
+              class="image featured"
+              ><img src="images/photograph/small/copenhagen.jpeg" alt=""
+            /></a>
+            <header>
+              <h3><a>Copenhagen, Denmark</a></h3>
+            </header>
+            <p>March 2024</p>
+          </article>
+
+          <article>
             <a href="images/photograph/full/paris2.JPG" class="image featured"
               ><img src="images/photograph/small/paris2.jpeg" alt=""
             /></a>
