--- a/index.html
+++ b/index.html
@@ -128,25 +128,22 @@
                   >)
                 </header>
                 <p>
-                  My given name is Chen, which means "dawn" or "early morning"
-                  in Chinese. This meaning suits me well, as I am a morning
-                  person who enjoys the calm and peacefulness of the early
-                  hours. Interestingly, "Chen" sounds similar to "Cheng", the
-                  Chinese word for "orange". Because of this playful
-                  resemblance, my friends affectionately call me "Cheng-Zi",
-                  which translates to "orange". 🍊
+                  My given name is <strong>Chen</strong>, which means "dawn" or
+                  "early morning" in Chinese. This meaning suits me well, as I
+                  am a morning person who enjoys the calm and peacefulness of
+                  the early hours. Interestingly, "Chen" sounds similar to
+                  "Cheng", the Chinese word for "orange". Because of this
+                  playful resemblance, my friends affectionately call me
+                  "Cheng-Zi", which translates to "orange". 🍊
                 </p>
                 <p>
-                  My surname is Huang, which means "yellow" in Chinese. This
-                  name has deep historical and cultural roots. It is often
-                  associated with the
+                  My surname is <strong>Huang</strong>, which means "yellow" in
+                  Chinese. This name has deep historical and cultural roots. It
+                  is often associated with the
                   <a href="https://en.wikipedia.org/wiki/Yellow_Emperor"
                     >Yellow Emperor</a
                   >, a legendary figure considered one of the founding ancestors
-                  of Chinese civilization. The Yellow Emperor is credited with
-                  uniting tribes, introducing advancements like medicine and
-                  agriculture, and laying the foundation for Chinese culture and
-                  history.
+                  of Chinese civilization.
                 </p>
                 <p>
                   I am always on the lookout for new opportunities to expand my
