--- a/photography.html
+++ b/photography.html
@@ -71,6 +71,9 @@
           <article id="photography" class="special">
             <header>
               <h2><a href="#photography" class="scrolly">Photography</a></h2>
+              <p>I enjoy capturing the beauty of the world. 
+              Here are some of my favorite photos.</p>
+              </p>
             </header>
           </article>
         </div>
@@ -138,7 +141,7 @@
               ><img src="images/photograph/small/morocco2.jpeg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Chefchaouen, Morocco</a></h3>
+              <h3><a>Chefchaouen, Morocco</a></h3>
             </header>
             <p>December 2023</p>
           </article>
@@ -155,7 +158,7 @@
               ><img src="images/photograph/small/epping_forest.jpeg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Epping Forest, UK</a></h3>
+              <h3><a>Epping Forest, UK</a></h3>
             </header>
             <p>October 2024</p>
           </article>
@@ -166,7 +169,7 @@
               ><img src="images/photograph/small/white_cliff.jpeg" alt=""
             /></a>
             <header>
-              <h3><a href="#">White Cliff, UK</a></h3>
+              <h3><a>White Cliff, UK</a></h3>
             </header>
             <p>June 2024</p>
           </article>
@@ -178,7 +181,7 @@
               ><img src="images/photograph/small/switzerland2.jpeg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Lungern, Switzerland</a></h3>
+              <h3><a>Lungern, Switzerland</a></h3>
             </header>
             <p>June 2024</p>
           </article>
@@ -187,7 +190,7 @@
               ><img src="images/photograph/small/paris.jpeg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Louvre, Paris, France</a></h3>
+              <h3><a>Louvre, Paris, France</a></h3>
             </header>
             <p>February 2024</p>
           </article>
