--- a/index.html
+++ b/index.html
@@ -118,7 +118,12 @@
               <hr class="first" />
               <section>
                 <div class="row gtr-50">
-                  <a class="image fit"><img src="images/photo.jpg" alt="" /></a>
+                  <a class="image fit"
+                    ><img
+                      src="images/photo.jpg"
+                      alt=""
+                      style="width: auto; border-radius: 50%"
+                  /></a>
                 </div>
                 <br />
                 <header>
