--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     ><img
                       src="images/photo.jpg"
                       alt=""
-                      style="width: auto; border-radius: 50%"
+                      style="width: 100%; border-radius: 50%"
                   /></a>
                 </div>
                 <br />
