--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                   /></a>
                 </div>
                 <br />
-                <header>
-                  <h3>Chen Huang / 黄晨</h3>
+                <header style="text-align: center">
+                  <h3>Chen Huang</h3>
                   (<a onclick="document.getElementById('name-audio').play();"
                     >Click to hear the pronunciation</a
                   >)
