--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                   the early hours. Interestingly, "Chen" sounds similar to
                   "Cheng", the Chinese word for "orange". Because of this
                   playful resemblance, my friends affectionately call me
-                  "Cheng-Zi", which translates to "orange". 🍊
+                  "Cheng-Zi", which translates to "orange".
+                  <img src="images/icon.png" alt="" />
                 </p>
                 <p>
                   My surname is <strong>Huang</strong>, which means "yellow" in
