--- a/index.html
+++ b/index.html
@@ -497,19 +497,24 @@
                     </li>
                     <li>
                       <strong
-                        >Outstanding Undergraduate in terms of Academic
+                        >Outstanding Undergraduate in Term of Academic
                         Performance</strong
                       >, HUST, 2019<br />
                       <i
-                        >*Highest honor for undergraduates at HUST, awarded to
-                        top 1%.</i
+                        >*The greatest honor for undergraduates at HUST, awarded
+                        to top 1%. The awarded students will be provided with
+                        professional instructors and personalized talent
+                        training plans. (<a
+                          href="docs/certificate-outstanding-UG.pdf"
+                          >View Certificate</a
+                        >)</i
                       >
                     </li>
                     <li>
                       <strong>National Scholarship</strong>, Ministry of
                       Education of China, 2019<br />
                       <i
-                        >*Highest honor for university students in China,
+                        >*The highest honor for university students in China,
                         awarded to top 0.2% nationwide.</i
                       >
                     </li>
