--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   internships, or further academic research, I'm eager to
                   connect with like-minded individuals and organizations. If
                   you're interested in my research or potential collaboration,
-                  please feel free to reach out! 📧
+                  please feel free to reach out!
                 </p>
                 <audio id="name-audio">
                   <source
