--- a/photography.html
+++ b/photography.html
@@ -145,6 +145,16 @@
             </header>
             <p>December 2023</p>
           </article>
+
+          <article>
+            <a href="images/photograph/full/beihai_park.JPG" class="image featured"
+              ><img src="images/photograph/small/beihai_park.jpeg" alt=""
+            /></a>
+            <header>
+              <h3><a>Beihai Park, Beijing, China</a></h3>
+            </header>
+            <p>March 2023</p>
+          </article>
         </div>
       </section>
 
