--- a/charge-noise-in-semiconductor-spin-qubits.html
+++ b/charge-noise-in-semiconductor-spin-qubits.html
@@ -74,7 +74,7 @@
               <header>
                 <h3>Research</h3>
               </header>
-              <p></p>
+              <br />
               <section>
                 <h4><a href="research.html">Overview</a></h4>
                 <p></p>
@@ -94,6 +94,15 @@
                   <a href="charge-noise-in-semiconductor-spin-qubits.html"
                     >Charge Noise in Semiconductor Spin Qubits</a
                   >
+                  <ol>
+                    <li>
+                      <a href="#introduction" class="scrolly">Introduction</a>
+                    </li>
+                    <li><a href="#theory" class="scrolly">Theory</a></li>
+                    <li>
+                      <a href="#simulation" class="scrolly">Simulation</a>
+                    </li>
+                  </ol>
                 </h4>
               </section>
             </div>
@@ -104,9 +113,26 @@
                   <p></p>
                 </header>
               </article>
-              <section>
+              <hr />
+              <section id="introduction">
                 <header>
-                  <h3></h3>
+                  <h3>Introduction</h3>
+                </header>
+                <p></p>
+              </section>
+              <hr />
+              <section id="theory">
+                <header>
+                  <h3>Theory</h3>
+                </header>
+                <p></p>
+                <h4>Coulomb blockade</h4>
+                <h4>Charge transport through quantum dots</h4>
+                <h4>Charge noise</h4>
+              </section>
+              <section id="simulation">
+                <header>
+                  <h3>Simulation</h3>
                 </header>
                 <p></p>
               </section>
