--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <hr class="first" />
               <section>
                 <div class="row gtr-50">
-                  <a class="image fit"
+                  <a class="image fit centered"
                     ><img
                       src="images/photo.jpg"
                       alt=""
