--- a/compilation-for-neutral-atom-quantum-computers.html
+++ b/compilation-for-neutral-atom-quantum-computers.html
@@ -101,8 +101,15 @@
               <article id="main">
                 <header>
                   <h2>Compilation for neutral atom quantum computers</h2>
-                  <p></p>
                 </header>
+                <p>
+                  This project was conducted within the Quantum Operating System
+                  Group at the Beijing Academy of Quantum Information Sciences
+                  (BAQIS), where I worked as a remote research intern. In
+                  collaboration with Dr. Jingbo Wang and Dr. Xi Zhao, this work
+                  focused on optimizing compilation strategies for neutral atom
+                  quantum computing systems.
+                </p>
               </article>
               <section>
                 <header>
