--- a/compilation-for-neutral-atom-quantum-computers.html
+++ b/compilation-for-neutral-atom-quantum-computers.html
@@ -83,6 +83,11 @@
                     >Compilation for neutral atom quantum computers</a
                   >
                 </h4>
+                <ol>
+                  <li><a href="#introduction">Introduction</a></li>
+                  <li><a href="#hardware">Hardware</a></li>
+                  <li><a href="#compilation">Compilation</a></li>
+                </ol>
                 <p></p>
                 <h4>
                   <a href="calibration-of-trapped-ion-systems.html"
@@ -111,11 +116,28 @@
                   quantum computing systems.
                 </p>
               </article>
-              <section>
+              <hr />
+              <section id="introduction">
                 <header>
-                  <h3>Optical tweezer</h3>
+                  <h3>Introduction</h3>
                 </header>
                 <p></p>
+              </section>
+              <hr />
+              <section id="hardware">
+                <header>
+                  <h3>Hardware</h3>
+                </header>
+                <h4>Optical tweezers</h4>
+              </section>
+              <hr />
+              <section id="compilation">
+                <header>
+                  <h3>Compilation</h3>
+                </header>
+                <h4>Scheduling</h4>
+                <h4>Placement</h4>
+                <h4>Routing</h4>
               </section>
             </div>
           </div>
