--- a/compilation-for-neutral-atom-quantum-computers.html
+++ b/compilation-for-neutral-atom-quantum-computers.html
@@ -84,9 +84,13 @@
                   >
                 </h4>
                 <ol>
-                  <li><a href="#introduction">Introduction</a></li>
-                  <li><a href="#hardware">Hardware</a></li>
-                  <li><a href="#compilation">Compilation</a></li>
+                  <li>
+                    <a href="#introduction" class="scrolly">Introduction</a>
+                  </li>
+                  <li><a href="#hardware" class="scrolly">Hardware</a></li>
+                  <li>
+                    <a href="#compilation" class="scrolly">Compilation</a>
+                  </li>
                 </ol>
                 <p></p>
                 <h4>
