--- a/compilation-for-neutral-atom-quantum-computers.html
+++ b/compilation-for-neutral-atom-quantum-computers.html
@@ -112,8 +112,11 @@
                   <h2>Compilation for neutral atom quantum computers</h2>
                 </header>
                 <p>
-                  This project was conducted within the Quantum Operating System
-                  Group at the Beijing Academy of Quantum Information Sciences
+                  This project was conducted within the
+                  <a href="http://en.baqis.ac.cn/research/groups/?cid=814"
+                    >Quantum Operating System Group</a
+                  >
+                  at the Beijing Academy of Quantum Information Sciences
                   (BAQIS), where I worked as a remote research intern. In
                   collaboration with Dr. Jingbo Wang and Dr. Xi Zhao, this work
                   focused on optimizing compilation strategies for neutral atom
