--- a/compilation-for-neutral-atom-quantum-computers.html
+++ b/compilation-for-neutral-atom-quantum-computers.html
@@ -122,6 +122,19 @@
                   focused on optimizing compilation strategies for neutral atom
                   quantum computing systems.
                 </p>
+                <ul>
+                  <li>
+                    <strong>C. Huang</strong>, X. Zhao, H. Xu, W. Zhuang, M.-J.
+                    Hu, D. E. Liu, and J. Wang, "ZAP: Zoned Architecture and
+                    Parallelizable Compiler for Field Programmable Atom Array,"
+                    <i
+                      >arXiv preprint
+                      <a href="https://arxiv.org/abs/2411.14037"
+                        >arXiv:2411.14037</a
+                      ></i
+                    >, 2024.
+                  </li>
+                </ul>
               </article>
               <hr />
               <section id="introduction">
