--- a/notes.html
+++ b/notes.html
@@ -225,14 +225,15 @@
                     <h3>
                       Huazhong University of Science and Technology 2018-2022
                     </h3>
-                    <p>
-                      This collection includes notes from my undergraduate
-                      studies, primarily written in Chinese. They cover a mix of
-                      topics, ranging from class lectures to self-directed
-                      learning. For clarity, I've added labels to indicate the
-                      source of each note.
-                    </p>
                   </header>
+                  <p>
+                    This collection includes notes from my undergraduate
+                    studies, primarily written in Chinese. They cover a mix of
+                    topics, ranging from class lectures to self-directed
+                    learning. For clarity, I've added labels to indicate the
+                    source of each note.
+                  </p>
+                  <label for="review">Review</label>
                   <ul>
                     <li>
                       复变函数 [<a href="docs/notes/[复变函数]期末复习笔记.pdf"
