--- a/notes.html
+++ b/notes.html
@@ -233,7 +233,11 @@
                     learning. For clarity, I've added labels to indicate the
                     source of each note.
                   </p>
-                  <label for="review">Review</label>
+                  <a
+                    href="compilation-for-neutral-atom-quantum-computers.html"
+                    class="button review"
+                    >Read more</a
+                  >
                   <ul>
                     <li>
                       复变函数 [<a href="docs/notes/[复变函数]期末复习笔记.pdf"
