--- a/notes.html
+++ b/notes.html
@@ -166,7 +166,9 @@
                 <header>
                   <h2><a href="#">Notes</a></h2>
                   <p>
-                    Morbi convallis lectus malesuada sed fermentum dolore amet
+                    This section presents a collection of my personal study
+                    materials, including detailed lecture notes, class
+                    summaries, and self-study observations.
                   </p>
                 </header>
                 <section>
@@ -235,7 +237,7 @@
                   </p>
                   <a
                     href="compilation-for-neutral-atom-quantum-computers.html"
-                    class="button review"
+                    class="button"
                     >Read more</a
                   >
                   <ul>
