--- a/notes.html
+++ b/notes.html
@@ -73,92 +73,13 @@
               <hr class="first" />
               <section>
                 <header>
-                  <h3><a href="#">HUST 2018-2022</a></h3>
+                  <p>Find the notes from:</p>
                 </header>
-                <p>
-                  Dolor sed fringilla nibh nulla convallis tique ante proin
-                  sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                  tempus cubilia ultrices tempor sagittis tellus ante diam nec
-                  penatibus dolor cras magna tempus feugiat veroeros.
-                </p>
-                <footer>
-                  <a href="#" class="button">Learn More</a>
-                </footer>
-              </section>
-              <hr />
-              <section>
-                <header>
-                  <h3><a href="#">Sed lorem etiam consequat</a></h3>
-                </header>
-                <p>
-                  Tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                  consequat integer interdum.
-                </p>
-                <div class="row gtr-50">
-                  <div class="col-4">
-                    <a href="#" class="image fit"
-                      ><img src="images/pic10.jpg" alt=""
-                    /></a>
-                  </div>
-                  <div class="col-8">
-                    <h4>Nibh sed cubilia</h4>
-                    <p>
-                      Amet nullam fringilla nibh nulla convallis tique ante
-                      proin.
-                    </p>
-                  </div>
-                  <div class="col-4">
-                    <a href="#" class="image fit"
-                      ><img src="images/pic11.jpg" alt=""
-                    /></a>
-                  </div>
-                  <div class="col-8">
-                    <h4>Proin sed adipiscing</h4>
-                    <p>
-                      Amet nullam fringilla nibh nulla convallis tique ante
-                      proin.
-                    </p>
-                  </div>
-                  <div class="col-4">
-                    <a href="#" class="image fit"
-                      ><img src="images/pic12.jpg" alt=""
-                    /></a>
-                  </div>
-                  <div class="col-8">
-                    <h4>Lorem feugiat magna</h4>
-                    <p>
-                      Amet nullam fringilla nibh nulla convallis tique ante
-                      proin.
-                    </p>
-                  </div>
-                  <div class="col-4">
-                    <a href="#" class="image fit"
-                      ><img src="images/pic13.jpg" alt=""
-                    /></a>
-                  </div>
-                  <div class="col-8">
-                    <h4>Sed tempus fringilla</h4>
-                    <p>
-                      Amet nullam fringilla nibh nulla convallis tique ante
-                      proin.
-                    </p>
-                  </div>
-                  <div class="col-4">
-                    <a href="#" class="image fit"
-                      ><img src="images/pic14.jpg" alt=""
-                    /></a>
-                  </div>
-                  <div class="col-8">
-                    <h4>Malesuada fermentum</h4>
-                    <p>
-                      Amet nullam fringilla nibh nulla convallis tique ante
-                      proin.
-                    </p>
-                  </div>
-                </div>
-                <footer>
-                  <a href="#" class="button">Magna Adipiscing</a>
-                </footer>
+                <h4>Imperial College London 2023-2024</h4>
+                <p></p>
+                <h4>Huazhong University of Science and Technology 2018-2022</h4>
+                <p></p>
+                <h4>Peking University 2020 Summer</h4>
               </section>
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
@@ -171,7 +92,7 @@
                     summaries, and self-study observations.
                   </p>
                 </header>
-                <section>
+                <section id="imperial">
                   <header>
                     <h3>Imperial College London 2023-2024</h3>
                   </header>
@@ -222,7 +143,7 @@
                     </li>
                   </ul>
                 </section>
-                <section>
+                <section id="hust">
                   <header>
                     <h3>
                       Huazhong University of Science and Technology 2018-2022
@@ -345,9 +266,9 @@
                     </li>
                   </ul>
                 </section>
-                <section>
+                <section id="pku">
                   <header>
-                    <h3>PKU 2020 Summer</h3>
+                    <h3>Peking University 2020 Summer</h3>
                   </header>
                   <ul>
                     <li>
