--- a/notes.html
+++ b/notes.html
@@ -72,20 +72,31 @@
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
               <section>
-                <header>
-                  <p>Find the notes from:</p>
-                </header>
-                <h4>Imperial College London 2023-2024</h4>
+                <p>Find the notes from:</p>
                 <p></p>
-                <h4>Huazhong University of Science and Technology 2018-2022</h4>
+                <h4>
+                  <a href="#imperial" class="scrolly"
+                    >Imperial College London 2023-2024</a
+                  >
+                </h4>
                 <p></p>
-                <h4>Peking University 2020 Summer</h4>
+                <h4>
+                  <a href="#hust" class="scrolly"
+                    >Huazhong University of Science and Technology 2018-2022</a
+                  >
+                </h4>
+                <p></p>
+                <h4>
+                  <a href="#pku" class="scrolly"
+                    >Peking University 2020 Summer</a
+                  >
+                </h4>
               </section>
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
                 <header>
-                  <h2><a href="#">Notes</a></h2>
+                  <h2><a href="#main" class="scrolly">Notes</a></h2>
                   <p>
                     This section presents a collection of my personal study
                     materials, including detailed lecture notes, class
