--- a/notes.html
+++ b/notes.html
@@ -73,22 +73,23 @@
               <hr class="first" />
               <section>
                 <p>Find the notes from:</p>
-                <p></p>
+                <br />
                 <h4>
                   <a href="#imperial" class="scrolly"
-                    >Imperial College London 2023-2024</a
+                    >Imperial College London (2023-2024)</a
                   >
                 </h4>
                 <p></p>
                 <h4>
                   <a href="#hust" class="scrolly"
-                    >Huazhong University of Science and Technology 2018-2022</a
+                    >Huazhong University of Science and Technology
+                    (2018-2022)</a
                   >
                 </h4>
                 <p></p>
                 <h4>
                   <a href="#pku" class="scrolly"
-                    >Peking University 2020 Summer</a
+                    >Peking University (Summer 2020)</a
                   >
                 </h4>
               </section>
@@ -105,7 +106,7 @@
                 </header>
                 <section id="imperial">
                   <header>
-                    <h3>Imperial College London 2023-2024</h3>
+                    <h3>Imperial College London (2023-2024)</h3>
                   </header>
                   <ul>
                     <li>
@@ -157,7 +158,7 @@
                 <section id="hust">
                   <header>
                     <h3>
-                      Huazhong University of Science and Technology 2018-2022
+                      Huazhong University of Science and Technology (2018-2022)
                     </h3>
                   </header>
                   <p>
@@ -167,11 +168,6 @@
                     learning. For clarity, I've added labels to indicate the
                     source of each note.
                   </p>
-                  <a
-                    href="compilation-for-neutral-atom-quantum-computers.html"
-                    class="button"
-                    >Read more</a
-                  >
                   <ul>
                     <li>
                       复变函数 [<a href="docs/notes/[复变函数]期末复习笔记.pdf"
@@ -279,7 +275,7 @@
                 </section>
                 <section id="pku">
                   <header>
-                    <h3>Peking University 2020 Summer</h3>
+                    <h3>Peking University (Summer 2020)</h3>
                   </header>
                   <ul>
                     <li>
